--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ beautifulsoup4==4.11.1
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.0
+colorama==0.4.5
 cryptography==37.0.4
 Django==4.1
 gunicorn==20.1.0
@@ -15,6 +16,7 @@ outcome==1.2.0
 pycparser==2.21
 pyOpenSSL==22.0.0
 PySocks==1.7.1
+python-dotenv==0.20.0
 requests==2.28.1
 selenium==4.3.0
 six==1.16.0
@@ -22,10 +24,12 @@ sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.2
+tqdm==4.64.0
 trio==0.21.0
 trio-websocket==0.9.2
 tzdata==2022.1
 urllib3==1.26.11
+webdriver-manager==3.8.3
 webencodings==0.5.1
 whitenoise==6.2.0
 wsproto==1.1.0
